ratina images and background images

--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
                                 <a class="post-video__button">
                                     <div class="post-video__triangle"></div>
                                 </a>
-                                <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/>
+                                <!-- <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
+                                <img    srcset="images/video-post/md-video-plated.png 338px,
+                                                images/video-post/md-video-plated@2x.png 676px,
+                                                images/video-post/md-video-plated@3x.png 1014px"
+                                        src="images/video-post/md-video-plated.png" class="post-video__image" alt="plated">
                             </div>
                             <div class="post-video__video-content">
                                 <div class="post-video__video-content-wrapper horizontal-flex space-between">
@@ -102,7 +106,45 @@
                                 <a class="post-video__button">
                                     <div class="post-video__triangle"></div>
                                 </a>
-                                <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/>
+                                <!-- <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
+                                <img    srcset="images/video-post/md-video-plated.png 338px,
+                                                images/video-post/md-video-plated@2x.png 676px,
+                                                images/video-post/md-video-plated@3x.png 1014px"
+                                        src="images/video-post/md-video-plated.png" class="post-video__image" alt="plated"">                            
+                            </div>
+                            <div class="post-video__video-content">
+                                <div class="post-video__video-content-wrapper horizontal-flex space-between">
+                                        <h2 class="post-video__title">Plated</h2>
+                                        <div class="post-video__our-score vertical-flex">
+                                            <span class="post-video__our-score-text">Our Score</span>
+                                            <span class="post-video__our-score-score">9.3</span>
+                                        </div>
+                                </div>
+                                <ul  class="post-video__checklist">
+                                    <li class="post-video__checklist-item">Flexible plans</li>
+                                    <li class="post-video__checklist-item">Quality ingredients</li>
+                                    <li class="post-video__checklist-item">Helpful customer support</li>
+                                </ul>
+                                <div class="horizontal-flex space-between">
+                                    <a class="post-video__read-more" href="#">Read Review</a>
+                                    <button class="post-video__order-action">Order Now</button>
+                                </div>
+                            </div>
+                    </article>
+                    <article class="post-video post-video--mobile">
+                            <div class="post-video__video-content-mobile-wrapper horizontal-flex space-between">
+                                <h2 class="post-video__title">Plateddddd</h2>
+                                <a class="post-video__read-more-mobile" href="#">Read Review</a>
+                            </div>
+                            <div class="post-video__video-image">
+                                <a class="post-video__button">
+                                    <div class="post-video__triangle"></div>
+                                </a>
+                                <!-- <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
+                                <img    srcset="images/video-post/md-video-plated.png 338px,
+                                                images/video-post/md-video-plated@2x.png 676px,
+                                                images/video-post/md-video-plated@3x.png 1014px"
+                                        src="images/video-post/md-video-plated.png" class="post-video__image" alt="plated">
                             </div>
                             <div class="post-video__video-content">
                                 <div class="post-video__video-content-wrapper horizontal-flex space-between">
@@ -132,37 +174,11 @@
                                 <a class="post-video__button">
                                     <div class="post-video__triangle"></div>
                                 </a>
-                                <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/>
-                            </div>
-                            <div class="post-video__video-content">
-                                <div class="post-video__video-content-wrapper horizontal-flex space-between">
-                                        <h2 class="post-video__title">Plated</h2>
-                                        <div class="post-video__our-score vertical-flex">
-                                            <span class="post-video__our-score-text">Our Score</span>
-                                            <span class="post-video__our-score-score">9.3</span>
-                                        </div>
-                                </div>
-                                <ul  class="post-video__checklist">
-                                    <li class="post-video__checklist-item">Flexible plans</li>
-                                    <li class="post-video__checklist-item">Quality ingredients</li>
-                                    <li class="post-video__checklist-item">Helpful customer support</li>
-                                </ul>
-                                <div class="horizontal-flex space-between">
-                                    <a class="post-video__read-more" href="#">Read Review</a>
-                                    <button class="post-video__order-action">Order Now</button>
-                                </div>
-                            </div>
-                    </article>
-                    <article class="post-video post-video--mobile">
-                            <div class="post-video__video-content-mobile-wrapper horizontal-flex space-between">
-                                <h2 class="post-video__title">Plated</h2>
-                                <a class="post-video__read-more-mobile" href="#">Read Review</a>
-                            </div>
-                            <div class="post-video__video-image">
-                                <a class="post-video__button">
-                                    <div class="post-video__triangle"></div>
-                                </a>
-                                <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/>
+                                <!-- <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
+                                <img    srcset="images/video-post/md-video-plated.png 338px,
+                                                images/video-post/md-video-plated@2x.png 676px,
+                                                images/video-post/md-video-plated@3x.png 1014px"
+                                        src="images/video-post/md-video-plated.png" class="post-video__image" alt="plated">
                             </div>
                             <div class="post-video__video-content">
                                 <div class="post-video__video-content-wrapper horizontal-flex space-between">
@@ -198,7 +214,11 @@
                                         <a class="post-video__button">
                                             <div class="post-video__triangle"></div>
                                         </a>
-                                        <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/>
+                                        <!-- <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
+                                        <img    srcset="images/video-post/md-video-plated.png 338px,
+                                                        images/video-post/md-video-plated@2x.png 676px,
+                                                        images/video-post/md-video-plated@3x.png 1014px"
+                                                src="images/video-post/md-video-plated.png" class="post-video__image" alt="plated">
                                     </div>
                                     <div class="post-video__video-content">
                                         <div class="post-video__video-content-wrapper horizontal-flex space-between">
@@ -224,7 +244,11 @@
                                         <a class="post-video__button">
                                             <div class="post-video__triangle"></div>
                                         </a>
-                                        <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/>
+                                        <!-- <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
+                                        <img    srcset="images/video-post/md-video-plated.png 338px,
+                                                        images/video-post/md-video-plated@2x.png 676px,
+                                                        images/video-post/md-video-plated@3x.png 1014px"
+                                                src="images/video-post/md-video-plated.png" class="post-video__image" alt="plated">
                                     </div>
                                     <div class="post-video__video-content">
                                         <div class="post-video__video-content-wrapper horizontal-flex space-between">
@@ -250,7 +274,11 @@
                                         <a class="post-video__button">
                                             <div class="post-video__triangle"></div>
                                         </a>
-                                        <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/>
+                                        <!-- <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
+                                        <img    srcset="images/video-post/md-video-plated.png 338px,
+                                                        images/video-post/md-video-plated@2x.png 676px,
+                                                        images/video-post/md-video-plated@3x.png 1014px"
+                                                src="images/video-post/md-video-plated.png" class="post-video__image" alt="plated">
                                     </div>
                                     <div class="post-video__video-content">
                                         <div class="post-video__video-content-wrapper horizontal-flex space-between">
@@ -364,9 +392,14 @@
 
                 <aside class="vertical-flex">
                     <div class="articles">
+                        <!-- The images size are not correct so i had to prefix it with 90px width an height on the image itself-->
                         <h5 class="articles__title">Articles</h5>
                         <div class="articles__article-content horizontal-flex">
-                            <img src="images/article-post/md-article-pro-cons-desktop@2x.png" class="articles__article-image" alt="plated" height="90" width="90"/>
+                            <!-- <img src="images/article-post/md-article-pro-cons-desktop@2x.png" class="articles__article-image" alt="plated" height="90" width="90"/> -->
+                            <img    srcset="images/article-post/md-article-pro-cons-desktop.png 90px,
+                                            images/article-post/md-article-pro-cons-desktop@2x.png 180px,
+                                            images/article-post/md-article-pro-cons-desktop@3x.png 270px"
+                                    src="images/article-post/md-article-pro-cons-desktop.png"   width="90px" height="90px" class="articles__article-image" alt="pros-cons">                             
                             <div class="vertical-flex space-between">
                                 <span class="articles__article-title">The Pros And Cons Of A Meal Delivery Service</span>
                                 <a href="#" class="articles__article-read-more">Read More</a>
@@ -374,7 +407,11 @@
                         </div>
 
                         <div class="articles__article-content horizontal-flex">
-                            <img src="images/article-post/md-article-pro-cons-desktop@2x.png" class="articles__article-image" alt="plated" height="90" width="90"/>
+                            <!-- <img src="images/article-post/md-article-pro-cons-desktop@2x.png" class="articles__article-image" alt="plated" height="90" width="90"/> -->
+                            <img    srcset="images/article-post/md-article-pro-cons-desktop.png 90px,
+                                            images/article-post/md-article-pro-cons-desktop@2x.png 180px,
+                                            images/article-post/md-article-pro-cons-desktop@3x.png 270px"
+                                    src="images/article-post/md-article-pro-cons-desktop.png"  width="90px" height="90px" class="articles__article-image" alt="pros-cons">
                             <div class="vertical-flex space-between">
                                 <span class="articles__article-title">The Pros And Cons Of A Meal Delivery Service</span>
                                 <a href="#" class="articles__article-read-more">Read More</a>
@@ -382,7 +419,11 @@
                         </div>
 
                         <div class="articles__article-content horizontal-flex">
-                            <img src="images/article-post/md-article-pro-cons-desktop@2x.png" class="articles__article-image" alt="plated" height="90" width="90"/>
+                            <!-- <img src="images/article-post/md-article-pro-cons-desktop@2x.png" class="articles__article-image" alt="plated" height="90" width="90"/> -->
+                            <img    srcset="images/article-post/md-article-pro-cons-desktop.png 90px,
+                                            images/article-post/md-article-pro-cons-desktop@2x.png 180px,
+                                            images/article-post/md-article-pro-cons-desktop@3x.png 270px"
+                                    src="images/article-post/md-article-pro-cons-desktop.png"   width="90px" height="90px" class="articles__article-image" alt="pros-cons">
                             <div class="vertical-flex space-between">
                                 <span class="articles__article-title">The Pros And Cons Of A Meal Delivery Service</span>
                                 <a href="#" class="articles__article-read-more">Read More</a>
@@ -395,7 +436,11 @@
                                 <a class="post-video__button">
                                     <div class="post-video__triangle"></div>
                                 </a>
-                                <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/>
+                                <!-- <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
+                                <img    srcset="images/video-post/md-video-plated.png 338px,
+                                                images/video-post/md-video-plated@2x.png 676px,
+                                                images/video-post/md-video-plated@3x.png 1014px"
+                                        src="images/video-post/md-video-plated.png" class="post-video__image" alt="plated">                            
                             </div>
                             <div class="post-video__video-content">
                                 <div class="post-video__video-content-wrapper horizontal-flex space-between">
