fixing ratina issue img tags

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                                 <a class="post-video__button">
                                     <div class="post-video__triangle"></div>
                                 </a>
-                                <!-- <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
-                                <img    srcset="images/video-post/md-video-plated.png 338px,
-                                                images/video-post/md-video-plated@2x.png 676px,
-                                                images/video-post/md-video-plated@3x.png 1014px"
+                                <!-- <img src="images/video-post/md-video-plated.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
+                                <img    srcset="images/video-post/md-video-plated.png 1x,
+                                                images/video-post/md-video-plated-x2.png 2x,
+                                                images/video-post/md-video-plated-x3.png 3x"
                                         src="images/video-post/md-video-plated.png" class="post-video__image" alt="plated">
                             </div>
                             <div class="post-video__video-content">
@@ -106,10 +106,10 @@
                                 <a class="post-video__button">
                                     <div class="post-video__triangle"></div>
                                 </a>
-                                <!-- <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
-                                <img    srcset="images/video-post/md-video-plated.png 338px,
-                                                images/video-post/md-video-plated@2x.png 676px,
-                                                images/video-post/md-video-plated@3x.png 1014px"
+                                <!-- <img src="images/video-post/md-video-plated-x2.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
+                                <img    srcset="images/video-post/md-video-plated.png 1x,
+                                                images/video-post/md-video-plated-x2.png 2x,
+                                                images/video-post/md-video-plated-x3.png 3x"
                                         src="images/video-post/md-video-plated.png" class="post-video__image" alt="plated"">                            
                             </div>
                             <div class="post-video__video-content">
@@ -140,10 +140,10 @@
                                 <a class="post-video__button">
                                     <div class="post-video__triangle"></div>
                                 </a>
-                                <!-- <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
-                                <img    srcset="images/video-post/md-video-plated.png 338px,
-                                                images/video-post/md-video-plated@2x.png 676px,
-                                                images/video-post/md-video-plated@3x.png 1014px"
+                                <!-- <img src="images/video-post/md-video-plated-x2.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
+                                <img    srcset="images/video-post/md-video-plated.png 1x,
+                                                images/video-post/md-video-plated-x2.png 2x,
+                                                images/video-post/md-video-plated-x3.png 3x"
                                         src="images/video-post/md-video-plated.png" class="post-video__image" alt="plated">
                             </div>
                             <div class="post-video__video-content">
@@ -174,10 +174,10 @@
                                 <a class="post-video__button">
                                     <div class="post-video__triangle"></div>
                                 </a>
-                                <!-- <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
-                                <img    srcset="images/video-post/md-video-plated.png 338px,
-                                                images/video-post/md-video-plated@2x.png 676px,
-                                                images/video-post/md-video-plated@3x.png 1014px"
+                                <!-- <img src="images/video-post/md-video-plated-x2.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
+                                <img    srcset="images/video-post/md-video-plated.png 1x,
+                                                images/video-post/md-video-plated-x2.png 2x,
+                                                images/video-post/md-video-plated-x3.png 3x"
                                         src="images/video-post/md-video-plated.png" class="post-video__image" alt="plated">
                             </div>
                             <div class="post-video__video-content">
@@ -214,10 +214,10 @@
                                         <a class="post-video__button">
                                             <div class="post-video__triangle"></div>
                                         </a>
-                                        <!-- <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
-                                        <img    srcset="images/video-post/md-video-plated.png 338px,
-                                                        images/video-post/md-video-plated@2x.png 676px,
-                                                        images/video-post/md-video-plated@3x.png 1014px"
+                                        <!-- <img src="images/video-post/md-video-plated-x2.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
+                                        <img    srcset="images/video-post/md-video-plated.png 1x,
+                                                        images/video-post/md-video-plated-x2.png 2x,
+                                                        images/video-post/md-video-plated-x3.png 3x"
                                                 src="images/video-post/md-video-plated.png" class="post-video__image" alt="plated">
                                     </div>
                                     <div class="post-video__video-content">
@@ -244,10 +244,10 @@
                                         <a class="post-video__button">
                                             <div class="post-video__triangle"></div>
                                         </a>
-                                        <!-- <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
-                                        <img    srcset="images/video-post/md-video-plated.png 338px,
-                                                        images/video-post/md-video-plated@2x.png 676px,
-                                                        images/video-post/md-video-plated@3x.png 1014px"
+                                        <!-- <img src="images/video-post/md-video-plated-x2.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
+                                        <img    srcset="images/video-post/md-video-plated.png 1x,
+                                                        images/video-post/md-video-plated-x2.png 2x,
+                                                        images/video-post/md-video-plated-x3.png 3x"
                                                 src="images/video-post/md-video-plated.png" class="post-video__image" alt="plated">
                                     </div>
                                     <div class="post-video__video-content">
@@ -274,10 +274,10 @@
                                         <a class="post-video__button">
                                             <div class="post-video__triangle"></div>
                                         </a>
-                                        <!-- <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
-                                        <img    srcset="images/video-post/md-video-plated.png 338px,
-                                                        images/video-post/md-video-plated@2x.png 676px,
-                                                        images/video-post/md-video-plated@3x.png 1014px"
+                                        <!-- <img src="images/video-post/md-video-plated-x2.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
+                                        <img    srcset="images/video-post/md-video-plated.png 1x,
+                                                        images/video-post/md-video-plated-x2.png 2x,
+                                                        images/video-post/md-video-plated-x3.png 3x"
                                                 src="images/video-post/md-video-plated.png" class="post-video__image" alt="plated">
                                     </div>
                                     <div class="post-video__video-content">
@@ -395,10 +395,10 @@
                         <!-- The images size are not correct so i had to prefix it with 90px width an height on the image itself-->
                         <h5 class="articles__title">Articles</h5>
                         <div class="articles__article-content horizontal-flex">
-                            <!-- <img src="images/article-post/md-article-pro-cons-desktop@2x.png" class="articles__article-image" alt="plated" height="90" width="90"/> -->
-                            <img    srcset="images/article-post/md-article-pro-cons-desktop.png 90px,
-                                            images/article-post/md-article-pro-cons-desktop@2x.png 180px,
-                                            images/article-post/md-article-pro-cons-desktop@3x.png 270px"
+                            <!-- <img src="images/article-post/md-article-pro-cons-desktop-x2.png" class="articles__article-image" alt="plated" height="90" width="90"/> -->
+                            <img    srcset="images/article-post/md-article-pro-cons-desktop.png 1x,
+                                            images/article-post/md-article-pro-cons-desktop-x2.png 2x,
+                                            images/article-post/md-article-pro-cons-desktop-x3.png 3x"
                                     src="images/article-post/md-article-pro-cons-desktop.png"   width="90px" height="90px" class="articles__article-image" alt="pros-cons">                             
                             <div class="vertical-flex space-between">
                                 <span class="articles__article-title">The Pros And Cons Of A Meal Delivery Service</span>
@@ -407,10 +407,10 @@
                         </div>
 
                         <div class="articles__article-content horizontal-flex">
-                            <!-- <img src="images/article-post/md-article-pro-cons-desktop@2x.png" class="articles__article-image" alt="plated" height="90" width="90"/> -->
-                            <img    srcset="images/article-post/md-article-pro-cons-desktop.png 90px,
-                                            images/article-post/md-article-pro-cons-desktop@2x.png 180px,
-                                            images/article-post/md-article-pro-cons-desktop@3x.png 270px"
+                            <!-- <img src="images/article-post/md-article-pro-cons-desktop-x2.png" class="articles__article-image" alt="plated" height="90" width="90"/> -->
+                            <img    srcset="images/article-post/md-article-pro-cons-desktop.png 1x,
+                                            images/article-post/md-article-pro-cons-desktop-x2.png 2x,
+                                            images/article-post/md-article-pro-cons-desktop-x3.png 3x"
                                     src="images/article-post/md-article-pro-cons-desktop.png"  width="90px" height="90px" class="articles__article-image" alt="pros-cons">
                             <div class="vertical-flex space-between">
                                 <span class="articles__article-title">The Pros And Cons Of A Meal Delivery Service</span>
@@ -419,10 +419,10 @@
                         </div>
 
                         <div class="articles__article-content horizontal-flex">
-                            <!-- <img src="images/article-post/md-article-pro-cons-desktop@2x.png" class="articles__article-image" alt="plated" height="90" width="90"/> -->
-                            <img    srcset="images/article-post/md-article-pro-cons-desktop.png 90px,
-                                            images/article-post/md-article-pro-cons-desktop@2x.png 180px,
-                                            images/article-post/md-article-pro-cons-desktop@3x.png 270px"
+                            <!-- <img src="images/article-post/md-article-pro-cons-desktop-x2.png" class="articles__article-image" alt="plated" height="90" width="90"/> -->
+                            <img    srcset="images/article-post/md-article-pro-cons-desktop.png 1x,
+                                            images/article-post/md-article-pro-cons-desktop-x2.png 2x,
+                                            images/article-post/md-article-pro-cons-desktop-x3.png 3x"
                                     src="images/article-post/md-article-pro-cons-desktop.png"   width="90px" height="90px" class="articles__article-image" alt="pros-cons">
                             <div class="vertical-flex space-between">
                                 <span class="articles__article-title">The Pros And Cons Of A Meal Delivery Service</span>
@@ -436,10 +436,10 @@
                                 <a class="post-video__button">
                                     <div class="post-video__triangle"></div>
                                 </a>
-                                <!-- <img src="images/video-post/md-video-plated@2x.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
-                                <img    srcset="images/video-post/md-video-plated.png 338px,
-                                                images/video-post/md-video-plated@2x.png 676px,
-                                                images/video-post/md-video-plated@3x.png 1014px"
+                                <!-- <img src="images/video-post/md-video-plated-x2.png" class="post-video__image" alt="plated" height="190" width="338"/> -->
+                                <img    srcset="images/video-post/md-video-plated.png 1x,
+                                                images/video-post/md-video-plated-x2.png 2x,
+                                                images/video-post/md-video-plated-x3.png 3x"
                                         src="images/video-post/md-video-plated.png" class="post-video__image" alt="plated">                            
                             </div>
                             <div class="post-video__video-content">
